--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main>
-        <div id="welcome-section" class="content">
+        <div id="welcome-section" class="landing">
             <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
             <span id="down-button-container">
