more menu styling

--- a/menu.html
+++ b/menu.html
@@ -48,9 +48,13 @@
                     <h1>Menu</h1>
                     <img src="images-and-svgs/svgs/menu/restaurant-outline-svgrepo-com.svg">
                 </div>
-                <ul>
+                <ul id="menu-list">
                     <li class="menu-list-item">
-                        <h2>Sides</h2>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
+                            <h2>Sides</h2>
+                            <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
+                        </div>
                         <p class="category-description">A choice of a side comes with each main or can be purchased individually</p>
                         <ul class="category-list">
                             <li class="individual-list-item">
@@ -77,7 +81,11 @@
                         </ul>
                     </li>
                     <li class="menu-list-item">
-                        <h2>Mains</h2>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
+                            <h2>Mains</h2>
+                            <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
+                        </div>
                         <p class="category-description">description</p>
                         <ul class="category-list">
                             <li class="dishtype-list-item">
@@ -146,7 +154,11 @@
                         </ul>
                     </li>
                     <li class="menu-list-item">
-                        <h2>Specials</h2>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
+                            <h2>Specials</h2>
+                            <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
+                        </div>
                         <p class="category-description">Description</p>
                         <ul class="category-list">
                             <li class="dishtype-list-item">
@@ -170,7 +182,11 @@
                         </ul>
                     </li>
                     <li class="menu-list-item">
-                        <h2>Drinks</h2>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
+                            <h2>Drinks</h2>
+                            <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
+                        </div>
                         <p class="category-description">Description</p>
                         <ul class="category-list">
                             <li class="individual-list-item">
@@ -192,7 +208,11 @@
                         </ul>
                     </li>
                     <li class="menu-list-item">
-                        <h2>Desserts</h2>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
+                            <h2>Desserts</h2>
+                            <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
+                        </div>
                         <p class="category-description">Description</p>
                         <ul class="category-list">
                             <li class="individual-list-item">
@@ -214,12 +234,16 @@
                         </ul>
                     </li>
                     <li class="menu-list-item">
-                        <h2>Sauces</h2>
-                        <p class="dishtype-description">Description</p>
+                        <div id="category-welcome-text">
+                            <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
+                            <h2>Sauces</h2>
+                            <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
+                        </div>
+                        <p class="category-description">Description</p>
                         <ul class="category-list">
                             <li class="dishtype-list-item">
                                 <h3>Dips</h3>
-                                <p class="category-description">description</p>
+                                <p class="dishtype-description">description</p>
                                 <ul>
                                     <li class="individual-list-item">
                                         <h4>Milk</h4>
