--- a/menu.html
+++ b/menu.html
@@ -55,7 +55,7 @@
                             <h2>Sides</h2>
                             <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
                         </div>
-                        <p class="category-description">A choice of a side comes with each main or can be purchased individually</p>
+                        <p class="category-description">A choice of side comes with each meal or can be purchased individually. Price: €3. </p>
                         <ul class="category-list">
                             <li class="individual-list-item">
                                 <h4>Fruit</h4>
@@ -76,7 +76,7 @@
                             <li class="individual-list-item">
                                 <h4>Garlic Bread</h4>
                                 <p class="individual-description">Home-made gluten free garlic bread</p>
-                                <p class="ingredients">ingredients</p>
+                                <p class="ingredients">Gluten free flour, tapioca flour, yeast, salt, egg, honey, apple-cider vinegar, butter, garlic, olive-oil, parsley.</p>
                             </li>
                         </ul>
                     </li>
@@ -86,26 +86,26 @@
                             <h2>Mains</h2>
                             <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
                         </div>
-                        <p class="category-description">description</p>
+                        <p class="category-description">Add a side and drink to make it a meal or purchase individually. Price: €7.</p>
                         <ul class="category-list">
                             <li class="dishtype-list-item">
                                 <h3>Burger</h3>
-                                <p class="dishtype-description">Description</p>
+                                <p class="dishtype-description">All burgers are made in house and are available with any of the toppings listed in the salad-side and any sauce listed below. Each burger is served with a gluten free bun or wrapped in lettuce.</p>
                                 <ul>
                                     <li class="individual-list-item">
                                         <h4>Chicken</h4>
-                                        <p class="individual-description">description</p>
-                                        <p class="ingredients">ingredients</p>
+                                        <p class="individual-description">Chicken breast burger, seasoned and deep fried in extra virgin olive oil.</p>
+                                        <p class="ingredients">Chicken, onion powder, garlic powder, salt, potatoe flour, celery salt, mustard powder, thyme, basil, paprika, black-pepper, white-pepper, ginger.</p>
                                     </li>
                                     <li class="individual-list-item">
                                         <h4>Beef</h4>
-                                        <p class="individual-description">description</p>
-                                        <p class="ingredients">ingredients</p>
+                                        <p class="individual-description">1/4 pound burger, lightly seasoned and fried in extra virgin olice oil.</p>
+                                        <p class="ingredients">Beef, home-made worcestershire sauce, salt, garlic powder, pepper.</p>
                                     </li>
                                     <li class="individual-list-item">
                                         <h4>Vegetable</h4>
-                                        <p class="individual-description">description</p>
-                                        <p class="ingredients">ingredients</p>
+                                        <p class="individual-description">Meatless vegan burger, carefully selected vegetables combined to make a delicious burger, fried in extra virgin olive oil.</p>
+                                        <p class="ingredients">Mushroom, black-beans, carrot, brocolli, onion, garlic, olive oil, paprika, chilli powder, salt, black-pepper, walnut, spinach, parsley, gluten-free bread-crumbs,flaxseed-meal, tomatoe paste, brown-rice.</p>
                                     </li>
                                 </ul>
                             </li>
