--- a/index.html
+++ b/index.html
@@ -137,9 +137,21 @@
         </div>
     </main>
     <footer>
-        <div id="socialmedia-icons"></div>
-        <div id="contact-info"></div>
-        <div id="link-to-portfolio"></div>
+        <div class="content">
+            <div id="socialmedia-icons">
+                <a href="https://www.facebook.com/"><img src="images-and-svgs\svgs\social-media\facebook-svgrepo-com.svg"></a>
+                <a href="https://www.instagram.com/"><img src="images-and-svgs\svgs\social-media\instagram-svgrepo-com.svg"></a>
+                <a href="https://ie.linkedin.com/"><img src="images-and-svgs\svgs\social-media\linkedin-svgrepo-com.svg"></a>
+                <a href="https://twitter.com/"><img src="images-and-svgs\svgs\social-media\twitter-svgrepo-com.svg"></a>
+                <a href="https://www.youtube.com/"><img src="images-and-svgs\svgs\social-media\youtube-svgrepo-com.svg"></a>
+            </div>
+            <div id="line-break"></div>
+            <div id="created-by">
+                <p class="logo-text">QuickBite</p>
+                <p>created by</p>
+            </div>
+            <div id="link-to-portfolio"></div>
+        </div>
     </footer>
 </body>
 </html>
