--- a/menu.html
+++ b/menu.html
@@ -44,9 +44,12 @@
         </div>
         <div id="menu" class="content">
             <div id="welcome-text">
-                <img src="images-and-svgs/svgs/menu/restaurant-outline-svgrepo-com.svg">
-                <h1>Menu</h1>
-                <img src="images-and-svgs/svgs/menu/restaurant-outline-svgrepo-com.svg">
+                <div id="title-wrapper">
+                    <img src="images-and-svgs/svgs/menu/restaurant-outline-svgrepo-com.svg">
+                    <h1>Menu</h1>
+                    <img src="images-and-svgs/svgs/menu/restaurant-outline-svgrepo-com.svg">
+                </div>
+                <p id="menu-description">Our Specially selected Menu, hand crafted to leave you satisfied. Combine any side, main and drink into a meal. <span class="price">Price: €10</span>.</p>
             </div>
             <ul id="menu-list">
                 <li class="menu-list-item">
@@ -55,7 +58,7 @@
                         <h2>Sides</h2>
                         <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">A choice of side comes with each meal or can be purchased individually. Price: €3. </p>
+                    <p class="category-description">A choice of side comes with each meal or can be purchased individually. <span class="price">Price: €3</span>.</p>
                     <ul class="category-list">
                         <li class="individual-list-item">
                             <h4>Fruit</h4>
@@ -86,7 +89,7 @@
                         <h2>Mains</h2>
                         <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">Add a side and drink to make it a meal or purchase individually. Price: €7.</p>
+                    <p class="category-description">Add a side and drink to make it a meal or purchase individually. <span class="price">Price: €7</span>.</p>
                     <ul class="category-list">
                         <li class="dishtype-list-item">
                             <h3>Burger</h3>
@@ -111,43 +114,43 @@
                         </li>
                         <li class="dishtype-list-item">
                             <h3>Toasted Sandwiches</h3>
-                            <p class="dishtype-description">Description</p>
+                            <p class="dishtype-description">Fresh Toasted Sandwiches available with any filling from the salad menu and any sauce of your choice.</p>
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>Club</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                    <p class="individual-description">Club sandwich, complementary cuts of meat layered atop one another to form a tasty sandwich.</p>
+                                    <p class="ingredients">Bread, chicken, turkey, pork, egg, tomatoe and mayonnaise.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>BLT</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                    <p class="individual-description">Bacon, Lettuce, Tomatoe, simple.</p>
+                                    <p class="ingredients">Bread, bacon, lettuce, tomatoe and mayonnaise.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Brecfast</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                <p class="individual-description">A brecfast fit for a king (or queen), in a sandwich!</p>
+                                    <p class="ingredients">Bread, bacon, egg, pudding, hashbrown, butter.</p>
                                 </li>
                             </ul>
                         </li>
                         <li class="dishtype-list-item">
                             <h3>Pizza</h3>
-                            <p class="dishtype-description">Description</p>
+                            <p class="dishtype-description">Pizza for 1 from €7, Pizza for 2 from €11.</p>
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>Cheese</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                    <p class="individual-description">Classic cheese pizza</p>
+                                    <p class="ingredients">Gluten free pizza base, cheese, tomatoe sauce.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Pepperoni</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                    <p class="individual-description">Spicy pepperoni sliced thin on a delicious bed of cheese and tomatoe.</p>
+                                    <p class="ingredients">Gluten free pizza base, cheese, tomatoe sauce, pepperoni.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Hawaian</h4>
-                                    <p class="individual-description">description</p>
-                                    <p class="ingredients">ingredients</p>
+                                    <p class="individual-description">Hawaian style pizza, for the bold, for the different.</p>
+                                    <p class="ingredients">Gluten free pizza base, cheese, tomatoe sauce, ham, pinneapple.</p>
                                 </li>
                             </ul>
                         </li>
@@ -159,23 +162,26 @@
                         <h2>Specials</h2>
                         <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">Description</p>
+                    <p class="category-description">Our Special menu items, limited releases, seasonal dishes and the home of the QuickBite Special. <span class="price">Price: €10</span>.</p>
                     <ul class="category-list">
                         <li class="dishtype-list-item">
-                            <h3>The QuickBite Special</h3>
-                            <p class="dishtype-description">Description</p>
+                            <h3>The <span class="logo-text alt">QuickBite</span> Special</h3>
+                            <p class="dishtype-description">A sandwich of the finest fillings constructed between 2 square pieces of thin crust pizza, turned inwards. Can you say, perfection?</p>
                             <ul>
                                 <li class="individual-list-item">
-                                    <h4>The Brecfast bonanza</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>The Brecfast Bonanza</h4>
+                                    <p class="individual-description">Sometimes you want brecfast, sometimes you want lunch and sometimes you get both!</p>
+                                    <p class="ingredients">Bacon, egg, sausage and pizza.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Ham & Cheese</h4>
-                                    <p class="individual-description">description</p>
+                                    <p class="individual-description">For the cheese lovers, ham and cheese plus pizza who could want more?</p>
+                                    <p class="ingredients">Ham, cheese and more cheese, pizza.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Cajun Persuasion</h4>
-                                    <p class="individual-description">description</p>
+                                    <p class="individual-description">Spicy cajun chicken, earthy mushrooms and pizza.</p>
+                                    <p class="ingredients">Cajun chicken, mushroom, pizza.</p>
                                 </li>
                             </ul>
                         </li>
@@ -187,23 +193,23 @@
                         <h2>Drinks</h2>
                         <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">Description</p>
+                    <p class="category-description">Drinks are €2 except bottled water which is €1.</p>
                     <ul class="category-list">
                         <li class="individual-list-item">
                             <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <p class="individual-description">Irelands finest full fat milk.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Bottled Water</h4>
+                            <p class="individual-description">A bottle of still mineral water.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Coconut Water</h4>
+                            <p class="individual-description">100% coconut water.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Fruit Juice</h4>
+                            <p class="individual-description">A selection of fruit juices are available, see label for ingredients.</p>
                         </li>
                     </ul>
                 </li>
@@ -213,23 +219,23 @@
                         <h2>Desserts</h2>
                         <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">Description</p>
+                    <p class="category-description">For the cheat meal treat and the special occasion celebration. <span class="price">Price: €3</span>.</p>
                     <ul class="category-list">
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Nice-Cream</h4>
+                            <p class="individual-description">Our healthy option. Coconut milk with fresh fruit pieces as toppings.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Ice-Cream</h4>
+                            <p class="individual-description">This is the real deal. Ice-cream in a selection of flavours and toppings, see label for ingredients.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Rocky Road Slice</h4>
+                            <p class="individual-description">One slice of rocky road please, see label for ingredients.</p>
                         </li>
                         <li class="individual-list-item">
-                            <h4>Milk</h4>
-                            <p class="individual-description">description</p>
+                            <h4>Cheese Cake Slice</h4>
+                            <p class="individual-description">For the more refined dessert connoisseur, see label for ingredients.</p>
                         </li>
                     </ul>
                 </li>
@@ -239,37 +245,37 @@
                         <h2>Sauces</h2>
                         <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">Description</p>
+                    <p class="category-description">A selection of our finest sauces and dressings, these items have been carefully selected ensuring their ingredients meet our standard of what believe to be healthy and nurishing. <span class="price">Price: €1</span>.</p></p>
                     <ul class="category-list">
                         <li class="dishtype-list-item">
                             <h3>Dips</h3>
-                            <p class="dishtype-description">description</p>
+                            <p class="dishtype-description">Dips for chips, burgers and everything in between.</p>
                             <ul>
                                 <li class="individual-list-item">
-                                    <h4>Milk</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>Garlic Mayo</h4>
+                                    <p class="individual-description">A specially selected garlic mayonnaise, containing olive-oil.</p>
                                 </li>
                                 <li class="individual-list-item">
-                                    <h4>Milk</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>Curry</h4>
+                                    <p class="individual-description">Chip-shop style curry sauce sugar and sweetner free.</p>
                                 </li>
                                 <li class="individual-list-item">
-                                    <h4>Milk</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>Tomatoe</h4>
+                                    <p class="individual-description">A healthy ketchup, who knew?!</p>
                                 </li>
                             </ul>
                         </li>
                         <li class="dishtype-list-item">
                             <h3>Dressings</h3>
-                            <p class="dishtype-description">description</p>
+                            <p class="dishtype-description">Dressing for Salads, Sandwiches and everything in between.</p>
                             <ul>
                                 <li class="individual-list-item">
-                                    <h4>Milk</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>Olive-oil and balsamic-vinegar blend</h4>
+                                    <p class="individual-description">Not much to say with this one really, see label for ingredients.</p>
                                 </li>
                                 <li class="individual-list-item">
-                                    <h4>Milk</h4>
-                                    <p class="individual-description">description</p>
+                                    <h4>Ranch</h4>
+                                    <p class="individual-description">A healthy sugar and sweetner free, ranch style dressing, see label for ingredients.</p>
                                 </li>
                             </ul>
                         </li>
