Fixed button issues

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>QuickBite</title>
 
     <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
             <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
             <span id="down-button-container">
                 <a id="down-link" href="#logo-small">
-                    <img class="button" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
+                    <img class="button responsive" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
                 </a>
             </span>
         </div>
@@ -96,11 +97,11 @@
                 </li>
             </ul>
         </div>
-        <div id="continue-prompt">
+        <div class="continue-prompt">
             <h1>Like what you see? Check out our menu!</h1>
-            <span id="side-button-container">
-                <a id="side-link" href="menu.html">
-                    <img class="button alt" src="images-and-svgs\svgs\side-arrow.svg">
+            <span class="side-button-container">
+                <a href="menu.html">
+                    <img class="button side" src="images-and-svgs\svgs\side-arrow.svg">
                 </a>
             </span>
 
