--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <title>QuickBite</title>
 
     <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,10 +26,10 @@
                 <div class="nav-line"></div>
             </div>
             <ul id="nav-bar">
-                <li><p ><a href="index.html">Home</a></p></li>
-                <li><p class="active"><a href="menu.html">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p class="alt"><a href="index.html">Home</a></p></li>
+                <li><p class="active alt"><a href="menu.html">Menu</a></p></li>
+                <li><p class="alt"><a href="welcome-section">About-us</a></p></li>
+                <li><p class="alt"><a href="welcome-section">Contact</a></p></li>
             </ul> 
         </nav>
         <div id="nav-button-menu">
@@ -282,6 +283,14 @@
                     </ul>
                 </li>
             </ul>
+        </div>
+        <div class="continue-prompt">
+            <h1>Find out more about us!</h1>
+            <span class="alt side-button-container">
+                <a href="about.html">
+                    <img class="button" src="images-and-svgs\svgs\side-arrow-red.svg">
+                </a>
+            </span>
         </div>
     </main>
     <footer class="alt">
