about.html skeleton

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div class="nav-line"></div>
             </div>
             <ul id="nav-bar">
-                <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
+                <li><p class="active alt"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
+                <li><p><a href="about.html">About-us</a></p></li>
                 <li><p><a href="welcome-section">Contact</a></p></li>
             </ul> 
         </nav>
@@ -47,7 +47,7 @@
             <ul>
                 <li><p class="active"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
+                <li><p><a href="about.html">About-us</a></p></li>
                 <li><p><a href="welcome-section">Contact</a></p></li>
             </ul>
         </div>
@@ -117,7 +117,6 @@
                 <a href="https://www.youtube.com/"><img src="images-and-svgs\svgs\social-media\youtube-svgrepo-com.svg"></a>
             </div>
             <div id="line-break"></div>
-
             <div id="created-by">
                 <p id="created-by-text">created by </p>
                 <a id="portfolio-link" href="https://www.github.com/MrGeorgiou">
