--- a/menu.html
+++ b/menu.html
@@ -27,8 +27,8 @@
             </div>
             <ul id="nav-bar">
                 <li><p class="alt"><a href="index.html">Home</a></p></li>
-                <li><p class="active alt"><a href="menu.html">Menu</a></p></li>
-                <li><p class="alt"><a href="welcome-section">About-us</a></p></li>
+                <li><p class="active"><a href="menu.html">Menu</a></p></li>
+                <li><p class="alt"><a href="about.html">About-us</a></p></li>
                 <li><p class="alt"><a href="welcome-section">Contact</a></p></li>
             </ul> 
         </nav>
@@ -39,7 +39,7 @@
             <ul>
                 <li><p><a href="index.html">Home</a></p></li>
                 <li><p class="active"><a href="menu.html">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
+                <li><p><a href="about.html">About-us</a></p></li>
                 <li><p><a href="welcome-section">Contact</a></p></li>
             </ul>
         </div>
@@ -312,3 +312,4 @@
         </div>
     </footer>
 </body>
+</html>
