--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>QuickBite</title>
 
     <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/menu.css">
@@ -19,7 +20,12 @@
 <body>
     <main>
         <div class="landing">
-            <p>insert parallax image here</p>
+            <div id="parallax-lake">
+                <div class="parallax-item" id="background"></div>
+                <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle.png">
+                <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
+                <h1 id="text"><span class="logo-text-main">QuickBite</span> @ The Point</h1>
+            </div>
         </div>
         <nav>
             <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
@@ -47,6 +53,8 @@
             </ul>
         </div>
         <div class="content">
+
+
             <p>insert explanation of location</p>
             <p>insert opening hours grid</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed vulputate odio ut enim. Tincidunt dui ut ornare lectus. Dapibus ultrices in iaculis nunc sed augue lacus. Sed risus ultricies tristique nulla aliquet. Sit amet cursus sit amet dictum sit amet. Mauris ultrices eros in cursus turpis massa tincidunt dui. Aliquam faucibus purus in massa tempor. Et tortor consequat id porta. Venenatis a condimentum vitae sapien pellentesque.
