--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
             <span id="down-button-container">
-                <a id="down-link" href="#logo-small">
+                <a href="#logo-small">
                     <img class="button responsive" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
                 </a>
             </span>
