--- a/about.html
+++ b/about.html
@@ -21,10 +21,15 @@
     <main>
         <div class="landing">
             <div id="parallax-lake">
-                <div class="parallax-item" id="background"></div>
-                <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle.png">
-                <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
                 <h1 id="text"><span class="logo-text-main">QuickBite</span> @ The Point</h1>
+                <!-- <span id="down-button-container">
+                    <a href="#logo-small">
+                        <img class="button responsive" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
+                    </a>
+                </span> -->
+                <div class="parallax-item" id="background"></div>
+                <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle-alt.png">
+                <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
             </div>
         </div>
         <nav>
