More parallax changes.

--- a/about.html
+++ b/about.html
@@ -21,12 +21,11 @@
     <main>
         <div class="landing">
             <div id="parallax-lake">
-                <h1 id="text"><span class="logo-text-main">QuickBite</span> @ The Point</h1>
-                <!-- <span id="down-button-container">
-                    <a href="#logo-small">
-                        <img class="button responsive" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
-                    </a>
-                </span> -->
+                <div id="text">
+                    <h1><span class="logo-text-main">QuickBite</span> @ The Point</h1>
+                    <p id="scroll-prompt">scroll</p>
+                    </span>
+                </div>
                 <div class="parallax-item" id="background"></div>
                 <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle-alt.png">
                 <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
@@ -57,7 +56,7 @@
                 <li><p><a href="welcome-section">Contact</a></p></li>
             </ul>
         </div>
-        <div class="content">
+        <div id="main" class="content">
 
 
             <p>insert explanation of location</p>
