opening hours grid started

--- a/about.html
+++ b/about.html
@@ -57,7 +57,50 @@
             </ul>
         </div>
         <div id="main" class="content">
-
+            <div id="location">
+                <h1>You can find us at The Long Point, Loughrea, Galway!</h1>
+                <div id="address">
+                    <h2> Our address is:</h2>
+                    <ul>
+                        <li>
+                            <p>QuickBite Restaurant,</p>
+                        </li>
+                        <li>
+                            <p>The Long Point,</p>
+                        </li>
+                        <li>
+                            <p>Lake Rd,</p>
+                        </li>
+                        <li>
+                            <p>Knockanima,</p>
+                        </li>
+                        <li>
+                            <p>Loughrea,</p>
+                        </li>
+                        <li>
+                            <p>Co.Galway.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="opening-hours">
+                <h1>We are open! Probably</h1>
+                <div id="opening-hours-grid">
+                    <div class="grid-item">Monday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Tuesday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Wednesday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Thursday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Friday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Saturday</div>
+                    <div class="grid-item">09:00-17:00</div>
+                    <div class="grid-item">Sunday</div>
+                    <div class="grid-item">09:00-17:00</div>
+            </div>
 
             <p>insert explanation of location</p>
             <p>insert opening hours grid</p>
